--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -15,6 +15,7 @@
         {% endif %}
 
         <h1>用户列表</h1>
+        <hr>
     </header>
 
 
@@ -22,7 +23,7 @@
 
 <div>
 <!-- Large modal -->
-<button class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">修改用户</button>
+<button class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">修改用户</button>&emsp;
 
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog ">
