--- a/templates/user_login_log.html
+++ b/templates/user_login_log.html
@@ -5,7 +5,8 @@
 {% block head %}{% endblock %}
 
 {% block main %}
-    <header class="header"><h1>登录日志</h1></header>
+    <header class="header"><h1>登录日志</h1>
+        <hr></header>
  <div class="container">
 	<div class="row clearfix">
 		<div class="col-md-12 column">
